--- a/Android/ATTBLEGateway/app/build.gradle
+++ b/Android/ATTBLEGateway/app/build.gradle
@@ -20,11 +20,13 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.android.support:support-v4:23.1.1'
     compile 'com.github.bumptech.glide:glide:3.6.1'
+    compile files('libs/json-20160212.jar')
+    compile files('libs/org.eclipse.paho.client.mqttv3.jar')
 }
